--- a/watch-app/app/src/main/AndroidManifest.xml
+++ b/watch-app/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
         android:allowBackup="true"
         android:icon="@android:drawable/ic_menu_compass"
         android:label="@string/app_name"
-        android:theme="@android:style/Theme.DeviceDefault">
+        android:theme="@android:style/Theme.DeviceDefault"
+        android:networkSecurityConfig="@xml/network_security_config">
 
         <!-- Main Activity -->
         <activity
